# advent-of-code-2022

./: .editorconfig  .gitignore  main.py  pyproject.toml
src/: main.py
